# CortexSynapse

./: .dockerignore  Dockerfile  EXAMPLES.md  README.md  SECURITY.md  generate_docs.py  pyproject.toml
.github/workflows/: ci-cd.yml
codegen/: generator.py
docs/: README.md
docs/xsiam/: administration.md  alerts.md  assets-and-identity.md  endpoints.md  incidents.md  other-operations.md  policy-and-compliance.md  response-actions.md  threat-intelligence.md  xql-queries.md
docs/xsoar/: automations-and-scripts.md  content-management.md  dashboards-and-widgets.md  evidence-and-entries.md  incidents-and-investigations.md  indicators.md  integrations.md  other-operations.md  playbooks.md  user-management.md
server/: generated_xsiam_tools.py  generated_xsoar_tools.py  main.py  security.py
tests/: test_codegen.py  test_security.py  test_server.py
